tests/baselines/reference/assignmentCompatWithConstructSignatures2.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(23,1): error TS2322: Type '() => 数字' is not assignable to type 'T'.
  Property 'f' is missing in type '() => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(24,1): error TS2322: Type '(x: 数字) => 文字' is not assignable to type 'T'.
  Property 'f' is missing in type '(x: 数字) => 文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(25,1): error TS2322: Type '() => 数字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
  Property 'f' is missing in type '() => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(26,1): error TS2322: Type '(x: 数字) => 文字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
  Property 'f' is missing in type '(x: 数字) => 文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(34,1): error TS2322: Type 'S2' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
      Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(35,1): error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
      Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(36,1): error TS2322: Type '(x: 文字) => 数字' is not assignable to type 'T'.
  Property 'f' is missing in type '(x: 文字) => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(37,1): error TS2322: Type '(x: 文字) => 文字' is not assignable to type 'T'.
  Property 'f' is missing in type '(x: 文字) => 文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(38,1): error TS2322: Type 'S2' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
      Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(39,1): error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
      Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(40,1): error TS2322: Type '(x: 文字) => 数字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
  Property 'f' is missing in type '(x: 文字) => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(41,1): error TS2322: Type '(x: 文字) => 文字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
  Property 'f' is missing in type '(x: 文字) => 文字'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts (12 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        f: new (x: number) => void;
    }
    var t: T;
    var a: { f: new (x: number) => void };
    
    t = a;
    a = t;
    
    interface S {
        f: new (x: number) => string;
    }
    var s: S;
    var a2: { f: new (x: number) => string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    // errors
    t = () => 1;
    ~
!!! error TS2322: Type '() => 数字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '() => 数字'.
    t = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: 数字) => 文字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '(x: 数字) => 文字'.
    a = () => 1;
    ~
!!! error TS2322: Type '() => 数字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '() => 数字'.
    a = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: 数字) => 文字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '(x: 数字) => 文字'.
    
    interface S2 {
        f(x: string): void;
    }
    var s2: S2;
    var a3: { f(x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
!!! error TS2322:       Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
    t = a3;
    ~
!!! error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
!!! error TS2322:       Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
    t = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: 文字) => 数字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 数字'.
    t = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 文字'.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
!!! error TS2322:       Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
    a = a3;
    ~
!!! error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '新建 (x: 数字) => 无值'.
!!! error TS2322:       Type '(x: 文字) => 无值' provides no match for the signature 'new (x: number): void'.
    a = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: 文字) => 数字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 数字'.
    a = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type '{ f: 新建 (x: 数字) => 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 文字'.
    